arreglo de nav y css, arreglo de carrito html y css

--- a/src/main/resources/static/web/pages/carrito.html
+++ b/src/main/resources/static/web/pages/carrito.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/19135af981.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../media/logo-royaloak-2 (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/carrito.css">
+    <link rel="stylesheet" href="../css/navbar.css">
     <title>Royal Oak |Carrito de Compras</title>
 </head>
 <body>
@@ -28,7 +30,7 @@
                                                     <img id="carritoHamburguesa" src="../media/canastaIcono.png" alt="">
                                             </div>
                                             <div>
-                                                    <img src="../media/logo-royaloak-2.png" alt="">
+                                                    <img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="">
                                             </div>
                                             <div id="botonHamburguesa">
                                                     <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,23 +43,23 @@
 
                 <div id="hamburguesitas">
                     <div>
-                        <a  href=""><img src="../media/menuH.png"></a>
+                        <a href="../index.html"><img src="../media/menuH.png"></a>
                         <p>Menu</p>   
                     </div>
                     <div>
-                        <a  href=""><img src="../media/royal_menuH.png"></a>
-                        <p>Royal Oak</p>
+                        <a href="../pages/random.html"><img src="../media/royal_menuH.png"></a>
+                        <p>Royal</p>
                     </div>
-                    <div>
-                        <a  href=""><img src="../media/register_menuH.webp"></a>
+                    <div v-if="cliente.length == 0">
+                        <a href="../login.html"><img src="../media/register_menuH.webp"></a>
                         <p>Registrarme</p>
                     </div>
                     <div v-else>
-                        <a  href=""><img src="../media/register_menuH.webp"></a>
+                        <a href="../pages/perfil.html"><img src="../media/perfil_menuH.png"></a>
                         <p>Perfil</p>
                     </div>
                     <div>
-                        <a  href=""><img src="../media/logout_menuH.png"></a>
+                        <a href="#" @click="salir"><img src="../media/logout_menuH.png"></a>
                         <p>Salir</p>
                     </div>
                 </div>
@@ -68,7 +70,7 @@
                     <img id="carritoHamburguesa" src="../media/canastaIcono.png" alt="">
                 </div>
                 <div>
-                    <img src="../media/logo-royaloak-2.png" alt="">
+                    <img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="logo">
                 </div>
                 <div id="botonHamburguesa">
                     <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,7 +85,7 @@
             <header>
               <div class="nav">
                 <div id="marca">
-                        <a href="#"><img src="../media/logo-royaloak.png" alt="Logo"></a>
+                        <a href="../index.html"><img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="Logo"></a>
                 </div>
                 <div id="menu">
                         <a href="../index.html"><img class="scale-up-center" id="iconos"
@@ -92,25 +94,25 @@
                 </div>
                 <div>
                         <a href="#"><img class="scale-up-center" src="../media/iconoBolsita.webp"
-                                        alt=""></a>
+                                        alt="pedido"></a>
                         <p>Pedido</p>
                 </div>
                 <div>
-                        <a href="#"><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
-                                        alt=""></a>
+                        <a href="../pages/random.html"><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
+                                        alt="royal"></a>
                         <p>Royal</p>
                 </div>
-                <div>
+                <div v-if="cliente.length == 0">
                         <a href="../login.html"><img class="scale-up-center " src="../media/Register.webp"
-                                        alt=""></a>
+                                        alt="registro"></a>
                         <p>Registro</p>
                 </div>
-                <div>
-                    <a href="../pages/perfil.html"><img src="./media/Register.webp"></a>
+                <div v-else>
+                    <a href="../pages/perfil.html"><img src="../media/perfil.png" alt="perfil"></a>
                     <p>Perfil</p>
                 </div>
                 <div id="salir">
-                        <a href=""><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
+                        <a href="#" @click="salir"><img class="scale-up-center" src="../media/cerrarSesion.png" alt="salir"></a>
                         <p>Salir</p>
                 </div>
         </div>   
@@ -118,7 +120,7 @@
 
         <!-- ======= Main ======= -->
         <main>
-            <h1>Tu Carrito de Compras</h1>
+            <h1>Tu Pedido</h1>
 
             <div data-aos="zoom-in" class="divisor d-flex">
                 <div class="tipoDeComida">
@@ -127,8 +129,10 @@
                         
                 </div>
             </div>
-
-                <div class="shopping-cart">
+            <div v-if="cliente.length == 0">
+                <h2>Aun no agregaste productos a tu pedido</h2>
+            </div>
+                <div class="shopping-cart" v-else>
 
                 <div class="column-labels">
                     <label class="product-image">Image</label>
@@ -180,19 +184,23 @@
                         <div>
                         <input type="radio" id="radioDelivery" required value="delivery" class="btn-check" v-model="envioValue"></input>
                         <label for="radioDelivery" class="btn">
-                            <img src="../assets/comida.png" class="radioImg">
+                            <img src="../media/comida.png" class="radioImg">
                         </label>
                     </div>
                     <div>
                         <input type="radio" id="radioTakeaway" required value="takeaway" class="btn-check" v-model="envioValue"></input>
                         <label for="radioTakeaway" class="btn">
-                            <img src="../assets/para-llevar.png" class="radioImg">
+                            <img src="../media/para-llevar.png" class="radioImg">
                         </label>
                     </div>
                     </div>
                     <div class="totals-item" v-if="envioValue == 'delivery' && 2500 > subtotalTotal">
                     <label class="labels">Envío</label>
                     <div class="totals-value" id="cart-shipping">150.00</div>
+                    </div>
+                    <div class="totals-item" v-else>
+                        <label class="labels">Envío</label>
+                        <div class="totals-value" id="cart-shipping">0</div>
                     </div>
                     <div class="totals-item totals-item-total">
                     <label class="labels">Total</label>
@@ -222,7 +230,6 @@
     <script src="https://unpkg.com/vue@3"></script>
     <script src="../js/carrito.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="sweetalert2.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
