--- a/src/main/resources/static/web/pages/registro.html
+++ b/src/main/resources/static/web/pages/registro.html
@@ -13,14 +13,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Potta+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./registro.css">
+    <link rel="stylesheet" href="../css/registro.css">
+    <link rel="icon" href="../web/media/logo-royaloak-2 (1).ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>Pago Royal Oak</title>
+    <title>Registro</title>
 </head>
 
 <body>
     <div id="app">
-        <main class="text-center mt-5 mx-3">
+        <main class="text-center">
             <h1>
                 ¡Gracias por registrarte y ser parte de nuestra familia Royal Oak!
             </h1>
@@ -28,7 +29,7 @@
                 Podrás pedir comida de nuestro delicioso menú y obtendrás descuentos increibles que llegarán a tu correo
             </h2>
             <a href="./login.html">
-                <img class="mt-5 heartbeat" src="./assets/logo-royaloak-2.png" alt="">
+                <img class="mt-5 heartbeat" src="../media/logo-royaloak-2.png" alt="">
             </a>
             <h3 class="h5 mt-2">
                 Si no eres redirigido automaticamente despúes de 8 seg, haz click en el logo.
@@ -47,7 +48,7 @@
     <!-- Script de Axios - Vue.js - Javascript - SweetAlert -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
-    <script src="./registro.js"></script>
+    <script src="../js/registro.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- <script>AOS.init({ duration: 1200, })</script> -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
