--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -8,16 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="./register.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>login</title>
+    <link rel="icon" href="./media/logo-royaloak-2 (1).ico">
+    <title>Login Page</title>
 </head>
 
 <body>
     <div id="app">
         
         <a class="logo puff-in-center" target="_blank" href="./index.html">
-            <img id="logo" src="media/logo-royaloak.png" alt="">
+            <img id="logo" src="/web/media/logo-royaloak.png" alt="">
         </a>
     
         <div data-aos="fade-" class="section">
@@ -107,7 +108,7 @@
     <script src="sweetalert2.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init({duration: 1200,})</script>
-    <script src="./js/login.js" ></script>
+    <script src="./login.js"></script>
 
 </body>
 
