cambios index,admin y flecha login

--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/footer.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="icon" href="assets/logo-royaloak-2 (1).ico">
+        <link rel="icon" href="./media/logo-royaloak-2 (1).ico">
         <title>Document</title>
 </head>
 
@@ -683,7 +683,7 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>AOS.init({ duration: 1000, })</script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="./js/index.js"></script>
+        <script src="./index.js"></script>
         <script src="./js/sweetAlert.js"></script>
         <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
