--- a/src/main/resources/static/web/admin/admin.html
+++ b/src/main/resources/static/web/admin/admin.html
@@ -10,10 +10,10 @@
                 integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
                 crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./css/styleAdmin.css">
-        <link rel="stylesheet" href="./css/footer.css">
+        <link rel="stylesheet" href="../admin/styleAdmin.css">
+        <link rel="stylesheet" href="../css/footer.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="icon" href="assets/logo-royaloak-2 (1).ico">
+        <link rel="icon" href="../media/logo-royaloak-2 (1).ico">
         <title>Administrador</title>
 </head>
 
@@ -580,8 +580,8 @@
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>AOS.init({ duration: 1200, })</script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="./js/indexAdmin.js"></script>
-        <script src="./js/sweetAlert.js"></script>
+        <script src="./indexAdmin.js"></script>
+        <script src="../js/sweetAlert.js"></script>
         <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
 </body>
 
